made story page background fixed on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -490,18 +490,18 @@ footer {
       rgb(15, 15, 15, 0.9)
     ),
     url("img/plantscrop.jpg");
-  /* background-position: center; */
   background-position: 50% 40%;
   background-size: contain;
   background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
 
   position: absolute;
   top: 0;
   left: 0;
   height: 730px;
   width: 100vw;
-  background-size: cover;
-  background-repeat: no-repeat;
+
   z-index: -1;
   opacity: 0.4;
   clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
@@ -690,7 +690,7 @@ footer {
     width: 9rem;
     height: 7rem;
 
-    padding: 0.6rem 0;
+    padding: 0.5rem 0;
     filter: saturate(120%);
   }
 
@@ -739,11 +739,11 @@ footer {
         rgb(10, 10, 10)
       ),
       url("img/plantscrop.jpg");
-    background-position: 50% 0;
-    background-size: contain;
-    background-attachment: scroll;
 
-    clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
+    /* background-size: contain;
+    background-attachment: fixed; */
+
+    clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
   }
 
   .chili {
@@ -765,7 +765,7 @@ footer {
 
   .story-page-title {
     text-align: center;
-    padding: 0 0 5rem;
+    padding: 2rem 0 6rem;
     font-size: 2.4rem;
   }
 
@@ -796,11 +796,6 @@ footer {
     grid-column-end: 4;
   }
 
-  /* .story-img {
-    grid-row-start: 4;
-    grid-row-end: 5;
-  } */
-
   .story-btn {
     width: 100%;
     font-size: 1.2rem;
@@ -822,17 +817,9 @@ footer {
     /* grid-gap: 1rem; */
   }
 
-  /* .card {
-    width: 100%;
-  } */
-
   .card-img-container {
     height: 22vh;
   }
-
-  /* .card-img-top {
-    height: 200px;
-  } */
 
   footer {
     padding: 2rem 1rem;
